[gd_scene load_steps=5 format=3 uid="uid://qardjsmdaqg4"]

[ext_resource type="Script" path="res://Scripts/Ref.gd" id="1_mo7qn"]
[ext_resource type="Texture2D" uid="uid://cujp03mu03xfh" path="res://EnemieAssets/nhl94ref.png" id="2_m6tio"]
[ext_resource type="AudioStream" uid="uid://njdc6lj6lixo" path="res://Sounds/ref_whistle.wav" id="3_10pns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jfso"]
size = Vector2(49, 90)

[node name="Ref" type="Area2D"]
scale = Vector2(1.44465, 1.51032)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mo7qn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_m6tio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_1jfso")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.692209, -61.5765)

[node name="WhistleStart" type="Marker2D" parent="."]
position = Vector2(0, 40)

[node name="WhistleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_10pns")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
